@@ -18,6 +18,14 @@ asn_enc_rval_t der_encode(struct asn_TYPE_descriptor_s *type_descriptor,
 		void *app_key		/* Arbitrary callback argument */
 	);
 
+/* A variant of der_encode() which encodes data into the pre-allocated buffer */
+asn_enc_rval_t der_encode_to_buffer(
+		struct asn_TYPE_descriptor_s *type_descriptor,
+		void *struct_ptr,	/* Structure to be encoded */
+		void *buffer,		/* Pre-allocated buffer */
+		size_t *buffer_size	/* Initial buffer size (max) */
+	);
+
 /*
  * Type of the generic DER encoder.
  */
